fixed flickering in dark mode (but still is in light mode) / fixed sticker -left pos / fixed main menu tag color on hover

--- a/divi-child/src/scss/_main-navigation.scss
+++ b/divi-child/src/scss/_main-navigation.scss
@@ -299,7 +299,7 @@ header {
                   border-color: $wink-beige !important;
                   &:hover {
                     border-color: transparent !important;
-                    color: $wink-black !important;
+                    color: $wink-beige !important;
                   }
                 }
               }
