--- a/divi-child/src/scss/_wink-teaser-title-text.scss
+++ b/divi-child/src/scss/_wink-teaser-title-text.scss
@@ -7,29 +7,24 @@
   @include diviBreakpoint(980) {
     margin-bottom: 40px;
   }
-  .et_pb_row_1 {
-    @include diviBreakpoint(980) {
-      padding-top: 0;
-      padding-bottom: 0;
+  .et_pb_row {
+    &:first-child {
+      @include diviBreakpoint(980) {
+        padding-top: 0;
+        padding-bottom: 0;
+      }
     }
-    .et_pb_column_1 {
-      .et_pb_image {
-        .et_pb_image_wrap {
-          img {
-            transform: rotate(8deg);
-            @include diviBreakpoint(980) {
-              width: 120px;
-            }
-          }
-        }
+    &:last-child {
+      @include diviBreakpoint(980) {
+        padding-top: 0;
       }
     }
   }
-  .et_pb_row_2 {
+  .et_pb_row_1-4_3-4 {
     @include diviBreakpoint(980) {
       padding-bottom: 0;
     }
-    .et_pb_column_2 {
+    .et_pb_column_1_4 {
       .et_pb_image {
         .et_pb_image_wrap {
           left: -80px;
@@ -37,17 +32,16 @@
             left: -10px;
           }
           img {
+            //transform: rotate(8deg);
+            @include diviBreakpoint(980) {
+              width: 120px;
+            }
             @include diviBreakpoint(980) {
               width: 120px;
             }
           }
         }
       }
-    }
-  }
-  .et_pb_row_3 {
-    @include diviBreakpoint(980) {
-      padding-top: 0;
     }
   }
 
